tests/harness/errors/101_named_fn_source_loc.eu
# Error: type mismatch calling a user-defined function with wrong argument type
# Error location should point to the call site in the user's file
double(n): n * 2
result: double("hello")
